--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.32",
+    "swiper": "^9.2.0",
     "v-calendar": "^3.0.0",
     "vee-validate": "^4.8.3",
     "vue": "^3.2.47",
