--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
+    "vue-step-progress": "^1.0.2",
     "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
