--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vee-validate": "^4.8.3",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "^6.0.3",
     "vue-router": "^4.1.6",
     "vue-step-progress": "^1.0.2",
     "vue-sweetalert2": "^5.0.5"
