--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vee-validate/rules": "^4.8.3",
     "@vuepic/vue-datepicker": "^4.2.1",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.32",
